--- a/XUnitTestAPI/XUnitTestAPI.csproj
+++ b/XUnitTestAPI/XUnitTestAPI.csproj
@@ -15,10 +15,24 @@
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
     <PackageReference Include="Moq" Version="4.20.70" />
     <PackageReference Include="NUnit" Version="4.1.0" />
+    <PackageReference Include="ReportGenerator" Version="5.3.8" />
     <PackageReference Include="xunit" Version="2.5.3" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.5.3" />
   </ItemGroup>
 
+   <ItemGroup>
+	    <PackageReference Include="coverlet.collector" Version="6.0.2">
+		    <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		    <PrivateAssets>all</PrivateAssets>
+	    </PackageReference>
+	    <PackageReference Include="ReportGenerator" Version="5.3.8" />
+	    <PackageReference Include="xunit" Version="2.8.1" />
+	    <PackageReference Include="xunit.runner.visualstudio" Version="2.8.1">
+		    <PrivateAssets>all</PrivateAssets>
+		    <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+	    </PackageReference>
+   </ItemGroup>
+	
   <ItemGroup>
     <ProjectReference Include="..\API\API.csproj" />
   </ItemGroup>
@@ -26,5 +40,5 @@
   <ItemGroup>
     <Using Include="Xunit" />
   </ItemGroup>
-
+	
 </Project>
