Add connection string

--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=...;Initial Catalog=NET106_ASM_FastFood;Integrated Security=true;TrustServerCertificate=true"
+    "DefaultConnection": "Data Source=HAOTRAN;Initial Catalog=Data;Integrated Security=true;TrustServerCertificate=true"
   },
   "Logging": {
     "LogLevel": {
